k8s/02-addons/gateway/namespace.yaml
---
# yaml-language-server: $schema=https://kubeschema.imranh.org/core/v1/namespace
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
