k8s/02-addons/gateway/cilium-gateway.yaml
---
# yaml-language-server: $schema=https://kubeschema.imranh.org/gateway.networking.k8s.io/v1/gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gateway-tls
      allowedRoutes:
        namespaces:
          from: All
